support_tools/swigwin-3.0.12/Examples/test-suite/errors/cpp_template_partial.i
%module xxx

template<class T> class vector<T *> {
};
